[package]
name = "rwm"
version = "1.0.0"
authors = ["Julius Kreutz <julius@kreutz.dev>"]
edition = "2021"
description = "A small rust window manager"
readme = "README.md"
repository = "https://github.com/JuliusKreutz/rwm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = "symbols"
panic = "abort"

[dependencies]
pango = "0.15.10"
pangocairo = "0.15.1"

[dependencies.xcb]
version = "1.1.1"
features = ["xinerama"]

[dependencies.cairo-rs]
version = "0.15.10"
features = ["xcb"]
